@@ -1,3 +1,10 @@
+2006-03-12  Gabor Csardi  <csardi@cool100.rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (get.shortest.paths) :
+	to argument added
+	* interfaces/R/src/rinterface.c (R_igraph_get_shortest_paths) : 
+	updated
+
 2006-03-08  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : rewritten,
